--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PillBot</name>
-	<comment></comment>
+	<name>USB_RTC</name>
+	<comment />
 	<projects>
 	</projects>
 	<buildSpec>
